# NetworkCamera

./: .gitignore  CMakeLists.txt  README.md  library.h
src/: NetworkCamera.cpp  NetworkCamera.h  NetworkCameraImplement.cpp  NetworkCameraImplement.h  NetworkCameraStruct.h
